# SyntheticSymposium

./: .gitignore  README.md  docker-compose.yml  railway.toml
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  test_voice.py
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/db/: session.py
backend/app/models/: __init__.py  course.py  discipline.py  lecture.py  thinker.py
backend/app/routers/: courses.py  health.py  lectures.py  thinkers.py
backend/app/schemas/: course.py  lecture.py  thinker.py
backend/app/services/: azure_tts_service.py  lecture_generator.py  openai_tts_service.py  tts_service.py
backend/scripts/: seed.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: AudioPlayer.tsx  Layout.tsx  SyncedTranscript.tsx  ThinkerAvatar.tsx
web/src/context/: ThemeContext.tsx
web/src/pages/: CourseDetailPage.tsx  CoursesPage.tsx  HomePage.tsx  LecturePage.tsx  ThinkerDetailPage.tsx  ThinkersPage.tsx
